# spacy-ner-service

./: README.md  apprunner.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py  models.py  services.py
